# ml-knowledge

./: .gitignore  .gitmodules  README.md  pyproject.toml
ARENA_2.0_Exercises/: prerequisite_exercises.ipynb
ARENA_2.0_Exercises/chapter0_fundamentals/exercises/part1_ray_tracing/: answer.py  answers.py  test_with_pytest.py
ARENA_2.0_Exercises/chapter0_fundamentals/exercises/part2_cnns/: answers.py  answers_arraystrides.py  answers_convolution.py  answers_module.py
ARENA_2.0_Exercises/chapter0_fundamentals/exercises/part3_resnets/: answers_buildcnn.py  answers_finetune.py  answers_resnet.py
ARENA_2.0_Exercises/chapter0_fundamentals/exercises/part4_optimization/: answers_optimizers.py  answers_wandb.py
ARENA_2.0_Exercises/chapter1_transformers/exercises/part1_transformer_from_scratch/: answers_cleantransformer.py  answers_sampling.py  answers_understandinout.py
Tensor-Puzzles_Exercise/: Tensor Puzzlers.ipynb
numpy-100/: 100_Numpy_exercises.ipynb
numpy_stride_tricks/: exercises.ipynb
study_einsum/: EinsumNotebook.ipynb  MLP.ipynb
transformer/: Clean_Transformer_Demo_Template.ipynb
